# x-gfx

./: Cargo.toml  README.md  rust-toolchain.toml
examples/: main.rs  mcu.rs  window.rs
src/: config.rs  ffi.rs  frame.rs  lib.rs  palette.rs  surface.rs
src/gpu/: context.rs
src/mcu/: mod.rs
